<resources>
    <string name="app_name">ApiTask</string>
    <string name="save_change">Сохранить</string>
    <string name="delete_picture">Удалить картинку</string>
    <string name="price">Цена</string>

    <string name="count">Количество: </string>
    <string name="priceL">Цена: </string>

    <string name="addTitle">Наименование</string>
    <string name="addPrice">Цена</string>
    <string name="addCount">Количество</string>

    <string name="todo">TODO</string>
    <string name="order_by">Сортировка</string>
    <string name="search">Поиск</string>
    <string name="clear_sorting">Сброс</string>
    <string name="add_new">Добавить новое</string>
    <string name="add">Добавить</string>

    <string name="app_image">app image</string>
    <string-array name="bdNames">
        <item>Нет</item>
        <item>Цене</item>
        <item>Названию</item>
    </string-array>
    <string-array name="ascOrDesc">
        <item>По возрастанию</item>
        <item>По убыванию</item>
    </string-array>

</resources>